# S3fluid

./: .gitignore  README.md  acoustic_wave_demo1.py  acoustic_wave_demo2.py  advection_demo1.ipynb  advection_demo2.ipynb  burgers1d_demo.ipynb  cli_utils.py  demo2.ipynb  demo_compare_spherical_meshes.ipynb  demo_spherical_spectral_turbulence.ipynb  diffusion_demo1.py  fix_buffer.js  fix_buffers.js  fix_test.js  fix_three.js  geometry.py  helmholtz_decomposition_demo.ipynb  implementation_plan.md  index.html  jest.config.js  main.py  mesh.py  mesh_serial.py  noises.py  ns_on_sphere.ipynb  ns_on_sphere.py  ns_on_sphere2.py  null  package-lock.json  package.json  pipeline_patch.js  pipeline_patch2.js  plan.md  playwright.config.ts  profile_possion_solver.py  program.md  pyproject.toml  read_all.py  read_chunk.py  (+19 more)
.Jules/: palette.md
__tests__/: sht.test.js  solver.test.js  solver_ct.test.js  solver_pt.test.js
examples/: advection_demo2.ipynb  burgers1d_demo.ipynb  demo3.ipynb  demo3.py  demo3_kivy_glsl.py  diffusion_demo1.py  geometry.py  spherical_turbulence_no_shtns_vectorized.py  test_sht.html  test_sht.js
frontend/: package-lock.json  package.json
src/: fbo_utils.py  fbo_wrapper.py  gl_utils.py  gpgpu.js  sht.js  solver.js  texture_utils.py  worker.js
test-results/: .last-run.json
tests/: gpgpu.test.js  phase1.html  phase1.js  sht.test.js  test_cli_utils.py  test_fbo_precision.py  test_gpu_basics.py  test_gpu_physics.py  test_gpu_sht.py  test_hexsphere.py  test_integrator.py  test_line_intersection.py  test_lv2_gradient_reconstruction_on_inclined_surface  (+7 more)
(+83 files in other folders)
