[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.16.0",
    "hexasphere>=0.1.0",
    "icosphere>=0.1.3",
    "matplotlib>=3.10.8",
    "meshio>=5.3.5",
    "numpy>=2.4.3",
    "pygmsh>=7.1.17",
    "pytest>=9.0.2",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]
