[project]
name = "kivy-gpgpu-pde"
version = "0.1.0"
description = "基于 Kivy 和 GPGPU 的球面谱方法 PDE 模拟器"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kivy>=2.3.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pde_simulator"]
